<resources>
    <string name="app_name">ProyectoJuegoParejas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jugar">Jugar</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>
    <string name="facil">Facil</string>
    <string name="normal">Normal</string>
    <string name="dificil">Dificil</string>
    <string name="tu_puntuacion">Tu puntuación:</string>
    <string name="puntuacion_contrincante">Puntuación contricante:</string>
    <string name="victoria">Has ganado</string>
    <string name="derrota">Has perdido</string>
    <string name="empate">Has empatado</string>
    <string name="jugador">Jugador</string>
    <string name="score">Score</string>
    <string name="nombre_jugador">Nombre Jugador</string>
    <string name="musica">Música</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="is_musica_activa">is_musica_activa</string>
    <string name="fichero_opciones">com.example.michele.proyectojuegoparejas.fichero_opciones</string>
    <string name="dificultad">Dificultad</string>
    <string name="tiempo_partida">Tiempo partida</string>
</resources>
