<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michele.proyectojuegoparejas.FragmentOpciones">

    <!-- TODO: Update blank fragment layout -->

    <Switch
        android:id="@+id/activarMusica"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:checked="true"
        android:showText="true"
        android:text="@string/musica"
        android:textOff="@string/no"
        android:textOn="@string/si"
        android:thumbTint="@android:color/holo_red_light"
        android:trackTint="@color/colorPrimary"
        android:trackTintMode="src_over" />
</FrameLayout>
